# vrm-viewer

./: README.md  pyproject.toml
tests/: test_app.py
vrm_viewer/: __init__.py  __main__.py  app.py  tts.py  window.py
vrm_viewer/web/: index.html  style.css
vrm_viewer/web/js/: main.js  viseme.js
vrm_viewer/web/js/stage/: Blink.js  EmoteController.js  GazeController.js  VrmLoader.js  VrmStage.js
